头像，我的点赞
记得重构分页，可以提高性能

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -28,4 +28,12 @@ spring:
 
 logging:
   level:
-    com.hmdp: debug
+    com.example: debug
+
+resource:
+  path: D:/SpringBoot/Syuctacm_forum
+
+redisConfig:
+  address: redis://192.168.1.103:6379
+  password: lxc123
+
