头像文件存储改变

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -30,10 +30,14 @@ logging:
   level:
     com.example: debug
 
-resource:
-  path: D:/SpringBoot/Syuctacm_forum
 
 redisConfig:
   address: redis://192.168.1.103:6379
   password: lxc123
+
+file:
+  path: D:\SpringBoot\Syuctacm_forum\src\main\resource\static\picture\
+
+
+
 
