--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,17 +1,17 @@
 server:
   port: 7070
 spring:
-
+  #记得把对应密码改成自己的
   datasource:
     username: root
-    password: 123456
+    password: xxxxxx
     url: jdbc:mysql://127.0.0.1:3306/Syuct_forum?useUnicode=true&characterEncoding=UTF-8&useSSL=false&autoReconnect=true&failOverReadOnly=false&serverTimezone=UTC
     driver-class-name: com.mysql.cj.jdbc.Driver
 
   data:
     redis:
       port: 6379
-      password: lxc123
+      password: xxxxx
       host: 192.168.1.103
 
   rabbitmq:
